# linkedin_engagement_manager

./: .dockerignore  .env.example  .env.prod.example  .gitignore  .gitmodules  .mcp.json.example  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Needs_From_Chris.md  README.md  bootstrap_aws_cdk.sh  cdk.context.json  codecov.yml  coverage.json  deploy_aws_cdk.sh  dismiss_gh_codescan_alerts.sh  docker-compose.prod.yml  docker-compose.yml  focus_group_env.example  generate-ngrok-config.sh  ngrok-config-template-free.yml  ngrok-config-template.yml  open_urls.scpt  playwright.config.ts  push_image_to_aws.sh  pyproject.toml  requirements.in  requirements.txt  run.sh  run_azure_setup.sh  synth_aws_cdk.sh  upgrade_dependencies.sh
.github/: copilot-instructions.md  dependabot.yml
.github/actions/poetry_setup/: action.yml
.github/agents/: code-review.agent.md  documentation.agent.md  implementation.agent.md  testing.agent.md
.github/instructions/: ai-llm.instructions.md  ci-failure-handling.instructions.md  tests.instructions.md
.github/workflows/: build-and-push.yml  claude-code-review.yml  codeql-analysis.yml  codeql.yml  cqc-lem-azure-app-AutoDeployTrigger-7eaecc0c-ca9f-423b-a151-366e36834ad4.yml  dependabot-auto-merge.yml  dependabot-ci-autofix.yml  deploy-vps.yml  deploy.yml  e2e-coverage.yml  gitguardian-scan.yml  integration-coverage.yml  release-please.yml  test.yml  unit-tests.yml
.litellm/: complexity_router.py  config.yaml
.streamlit/: config.toml
_CI/: bootstrap.sh  deploy.sh
cloudflared/: config.yml
compose/local/: .dockerignore  Dockerfile  entrypoint  entrypoint_wait_mysql  wait-for-it
compose/local/database/: flyway-entrypoint.sh  setup.sql
compose/local/fastapi/: start  start-cloud
compose/local/node_docker/: config.toml
compose/local/prometheus/: generate-prometheus-config.sh  prometheus.yml  prometheus.yml.template
compose/local/streamlit/: Dockerfile  entrypoint  start  v1_Dockerfile.old
docs/: CostTracking.md  DEPLOYMENT.md  EGRESS_AT_SCALE.md  EMAIL_PIN_VERIFICATION.md  LANDING_PAGE_UPDATE.md  LINKEDIN_COOKIE.md  PER_USER_PROXY.md  RoadMap.md  RoadMap_v1.md  RoadMap_v2.md  SELENIUM_DEBUGGING.md  SETUP_CHECKLIST.md  Self Healing Grid.md  TDD_WORKFLOW.md  TESTING_ENGAGEMENT_API.md  TODO_PROJECT_TIMELINE.md  TRACING_GUIDE.md  automation_playbooks.md  celery-flower-guide.md  celery-once-aws-sqs.md  stripe-setup-guide.md
docs/postman/: LEM_Engagement_Tests.postman_collection.json  LEM_Local.postman_environment.json  LEM_Prod.postman_environment.json  README.md
examples/: integration_example.md  tracing_example.py
scripts/: backup.sh  check_env.sh  deploy.sh  generate_media_variants.sh  rollback.sh  vps_bootstrap.sh
src/: linked_in_profile.py  run_automation.py  schema.sql  selenium_util.py
src/cqc_lem/: __init__.py  celeryconfig.py  linked_in_profile.py  my_celery.py  run_automation.py  run_content_plan.py  run_scheduler.py
src/cqc_lem/api/: main.py
src/cqc_lem/app/: __init__.py  aws_test_celery_task.py  celeryconfig.py  generate_variants.py  my_celery.py  run_automation.py  run_content_plan.py  run_scheduler.py
src/cqc_lem/aws/: app.py  bootstrap.py  cdk.json  deploy.py  diagram.dot  util.py
src/cqc_lem/streamlit/: Home.py  initi_pages.py  utils.py
src/cqc_lem/ui/: index.html  package-lock.json  package.json  vite.config.ts
src/cqc_lem/utilities/: c2pa_helper.py  carousel_creator.py  date.py  db.py  email.py  env_constants.py  imessages_political_analyzer.py  jaeger_tracer_helper.py  linked_in_helper.py  linked_in_scrapper.py  linkedin_formatter.py  logger.py  mime_type_helper.py  notifications.py  observability.py  pexels_helper.py  proxy.py  selenium_util.py  stripe_util.py  utils.py
src/cqc_lem_streamlit/: Home.py  README.md  initi_pages.py  utils.py
src/cqc_lem_streamlit/pages/: 1_My_Account.py  1_Post_Content.py  2_Review_Schedule.py  2_Schedule_Content.py  3_Review_Schedule.py
src/database/: custom-entrypoint.sh  flyway-entrypoint.sh  setup.sql
src/database/migrations/: V10__make_expire_plural.sql  V11__change_token_field_lengths.sql  V13__add_field_for_linked_sub_id.sql  V2__add_new_table.sql  V3__remove_url_from_table.sql  V4__add_user_ids.sql  V5__create_profiles_table.sql  V6__add_status_to_posts_table.sql  V8__add_updated_at_extra_fields.sql
src/utilities/: date.py  linked_in_scrapper.py
tests/: README.md  ai_tests.py  aws_test.py  chrome_test.py  conftest.py  date_tests.py  db_tests.py  run_automation_test.py  run_content_plan_test.py  simple_automation_tests.py  test_automation_playbooks.py  test_jaeger_tracer_helper.py
tests/_deprecated/: README.md  ai_tests.py  chrome_test.py  simple_automation_tests.py
tests/e2e/: test_avatar_e2e.py  test_capsolver_e2e.py  test_carousel_video_post_e2e.py  test_post_workflow_e2e.py
tests/integration/: test_api.py  test_avatar_api.py  test_carousel_creation.py  test_content_plan.py  test_ollama_video.py  test_perplexity.py  test_pexels_video.py
tests/unit/: test_cdk_stack.py  test_celery_once_config.py
tests/unit/api/: test_admin_engagement_test_runs.py  test_admin_generate_media_variants.py  test_api_account_readiness.py  test_api_company_page.py  test_api_linkedin_cookie.py  test_api_location.py  test_api_timezone.py  test_api_token_gate.py  test_main_billing.py  test_main_general.py  test_main_posts.py  test_main_security.py  test_post_url.py  test_video_credits_api.py
tests/unit/app/: test_asset_backfill.py  test_carousel_regenerate.py  test_generate_variants.py  test_get_current_profile.py  test_my_celery.py  test_run_automation_login.py  test_run_automation_posting.py  test_run_content_plan.py  test_run_scheduler.py  test_selenium_queue_routing.py  test_video_tier_pipeline.py
tests/unit/utilities/: test_avatar_db.py  test_c2pa_helper.py  test_carousel_creator.py  test_carousel_slide_images.py  test_date.py  test_db.py  test_db_company_page.py  test_db_extended.py  test_db_li_at.py  test_db_location.py  (+19 more)
tools/: debug_linkedin_login.py  selenium_mcp_server.py
tools/linkedin-cookie-extension/: manifest.json  popup.html  popup.js
(+125 files in other folders)
