[tool.poetry]
name = "linkedin-engagement-manager"
version = "0.1.0"
description = ""
authors = ["gitchrisqueen <christopher.queen@gmail.com>"]
readme = "README.md"
packages = [
    { include = "cqc_lem", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

# --- Web / API ---
fastapi = ">=0.115.4,<0.138.0"
uvicorn = ">=0.32,<0.50"
pydantic-extra-types = "^2.10.0"
python-dotenv = "^1.0"
python-multipart = ">=0.0.9,<1.0"
requests = "^2.32.3"
typing-extensions = "^4.12.2"

# --- Task queue ---
celery = {version = "^5.4.0", extras = ["redis"]}
redis = ">=5.2,<7.0"
celery-once = {git = "https://github.com/gitchrisqueen/celery-once.git"}
flower = "^2.0.1"

# --- Database ---
mysql-connector-python = "^9.1"

# --- LinkedIn automation ---
selenium = "^4.25"
linkedin-api-client = "^0.3.0"
bs4 = "^0.0.2"
pycurl = "^7.45.4"

# --- AI / external APIs ---
openai = ">=1.52.2,<3.0.0"
googlenews = "^1.6.15"
runwayml = ">=2.1,<5.0"
replicate = "^1.0.4"
pexels-api = "^1.0.1"

# --- Content processing ---
markdownify = ">=0.13.1,<1.3.0"
tldextract = "^5.1.2"
nltk = "^3.9.1"
fpdf = "^1.7.2"
python-pptx = "^1.0.2"
mammoth = "^1.8.0"
docx = "^0.2.4"
dateparser = "^1.2.0"

# --- Observability ---
posthog = ">=3.7,<8.0"

# --- AWS / payments ---
boto3 = "^1.36.7"
sendgrid = "^6.12.5"
stripe = "^15.2.1"

# ---------------------------------------------------------------------------
# streamlit group — legacy Streamlit UI (replaced by React SPA).
# NOT installed in Docker. Install locally with:
#   poetry install --with streamlit
# Add packages here if they are only needed for Streamlit pages.
# ---------------------------------------------------------------------------
[tool.poetry.group.streamlit]
optional = true

[tool.poetry.group.streamlit.dependencies]
streamlit = ">=1.39,<1.40.0 || >1.40.1,<2.0"
streamlit-ext = "^0.1"
streamlit-elements = "^0.1"
extra-streamlit-components = "^0.1"
streamlit-aggrid = "^1.0"
# pandas is only imported in src/cqc_lem/streamlit/ — keep here, not in main
pandas = "^2.2.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
# Development Tools
jupyter = "^1.0.0"
setuptools = ">=67.6.1,<83.0.0"
grandalf = "^0.8"
watchdog = ">=5.0.3,<7.0.0"

#AWS
aws-cdk-lib = "^2.177.0"
constructs = "^10.4.2"
cdk-ecr-deployment = ">=3.1.8,<5.0.0"
aws-cdk-aws-amplify-alpha = "^2.177.0a0"
aws-cdk-aws-lambda-python-alpha = "^2.177.0a0"

# Observability Tools (Development)
opentelemetry-api = "^1.28.2"
opentelemetry-sdk = "^1.28.2"
opentelemetry-instrumentation-celery = "^0.49b2"
opentelemetry-exporter-otlp = "^1.28.2"
opentelemetry-instrumentation-fastapi = "^0.49b2"


[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
ruff = "^0.1.5"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
# The only dependencies that should be added are
# dependencies used for running tests (e.g., pytest, freezegun, response).
# Any dependencies that do not meet that criteria will be removed.
pytest = ">=7.3,<9.0"
pytest-cov = ">=4.1,<8.0"
freezegun = "^1.2.2"
pytest-mock = "^3.10.0"
syrupy = "^4.0.2"
pytest-watcher = "^0.3.4"
pytest-asyncio = ">=0.21.1,<1.5.0"
grandalf = "^0.8"
pytest-profiling = "^1.7.0"
pytest-playwright = ">=0.4.0,<1.0.0"


[tool.coverage.run]
omit = [
    "tests/*",
    "src/cqc_lem/aws/*",
]
source = ["src/cqc_lem"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "T201", # print
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
# --strict-markers will raise errors on unknown marks.
# https://docs.pytest.org/en/7.1.x/how-to/mark.html#raising-errors-on-unknown-marks
#
# https://docs.pytest.org/en/7.1.x/reference/reference.html
# --strict-config       any warnings encountered while parsing the `pytest`
#                       section of the configuration file raise errors.
#
# https://github.com/tophat/syrupy
# --snapshot-warn-unused    Prints a warning on unused snapshots rather than fail the test suite.
addopts = "--snapshot-warn-unused --strict-markers --strict-config --durations=5 -v"
norecursedirs = ["_deprecated", ".git", "__pycache__", ".venv", "node_modules"]
# Registering custom markers.
# https://docs.pytest.org/en/7.1.x/example/markers.html#registering-markers
markers = [
    "requires: mark tests as requiring a specific library",
    "asyncio: mark tests as requiring asyncio",
    "compile: mark placeholder test used to compile integration tests without running them",
    "unit: mark a test as a unit test",
    "integration: mark a test as an integration test",
    "e2e: mark a test as an end-to-end test",
    "slow: mark test as slow running",
    "requires_openai: mark test as requiring real OpenAI API access",
    "requires_database: mark test as requiring real database connection",
    "requires_selenium: mark test as requiring real browser automation",
    "requires_replicate: mark test as requiring a real REPLICATE_API_TOKEN",
]
asyncio_mode = "auto"
